--- a/themes/Sakura/source/404.html
+++ b/themes/Sakura/source/404.html
@@ -231,7 +231,7 @@
     };
     document.querySelector('#message').innerHTML += '<h1>😭&nbsp;&nbsp;您访问页面找不到啦</h1>' +
         '<p>' +
-        '🏠您可以返回首页<a href="https://dummerfu">dummerfu</a><br>' +
+        '🏠您可以返回首页<a href="https://dummerfu.top">dummerfu</a><br>' +
         '或者...<br>' +
         '🐱‍🐉玩一会小恐龙dino快跑&nbsp;&nbsp;&nbsp;&nbsp;<br>' +
         '按' +
